adding skills hexagon

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="landing">
+<div class="landing" [style.height]="height+'px'" (resize)="onResize($event)">
   landing works!
 
   <app-skills></app-skills>
