--- a/src/app/landing/skills/skills.component.html
+++ b/src/app/landing/skills/skills.component.html
@@ -1,3 +1,27 @@
-<p>
+<div>
   skills works!
-</p>
+
+  <div class="row1">
+    <app-skill-hexagon label="App"></app-skill-hexagon>
+    <app-skill-hexagon label="App"></app-skill-hexagon>
+    <app-skill-hexagon label="App"></app-skill-hexagon>
+  </div>
+
+  <div class="clear"></div>
+
+  <div class="row2">
+    <app-skill-hexagon label="App"></app-skill-hexagon>
+    <app-skill-hexagon label="Hello"></app-skill-hexagon>
+    <app-skill-hexagon label="World"></app-skill-hexagon>
+    <app-skill-hexagon label="App"></app-skill-hexagon>
+  </div>
+
+  <div class="clear"></div>
+
+  <div class="row1">
+    <app-skill-hexagon label="App"></app-skill-hexagon>
+    <app-skill-hexagon label="App"></app-skill-hexagon>
+    <app-skill-hexagon label="App"></app-skill-hexagon>
+  </div>
+
+</div>
